--- a/leaflet-step-1/style.css
+++ b/leaflet-step-1/style.css
@@ -44,6 +44,21 @@ body, #map, html {
     height: 100%;
 }
 
+.legend {
+    line-height: 18px;
+    color: #555;
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+
 @media (max-width: 768px) {
     img.blur {
         width: auto;
